--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     
   <h1>Mina arbetserfarenheter</h1>
+  <ul id="experienceList"></ul>
+
+  <script src="js/config.js"></script>
+  <script src="js/main.js"></script>
  
 </body>
 </html>
