--- a/about.html
+++ b/about.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Startsida</a></li>
+      <li><a href="add.html">Lägg till</a></li>
+      <li><a href="about.html">Om</a></li>
+    </ul>
+  </nav>
   <h1>Om Webbplatsen</h1>
 
 
