--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    
+  <nav>
+    <ul>
+      <li><a href="index.html">Startsida</a></li>
+      <li><a href="add.html">Lägg till</a></li>
+      <li><a href="about.html">Om</a></li>
+    </ul>
+  </nav>
   <h1>Mina arbetserfarenheter</h1>
   <ul id="experienceList"></ul>
-
   <script src="js/config.js"></script>
   <script src="js/main.js"></script>
- 
 </body>
 </html>
