--- a/add.html
+++ b/add.html
@@ -16,28 +16,20 @@
   <h1>Lägg till arbetserfarenhet</h1>
   <form id="workForm">
     <label for="companyname">Företagsnamn:</label>
-    <input type="text" id="companyname" name="companyname" required />
-
+    <input type="text" id="companyname" name="companyname" />
     <label for="jobtitle">Jobbtitel:</label>
-    <input type="text" id="jobtitle" name="jobtitle" required />
-
+    <input type="text" id="jobtitle" name="jobtitle" />
     <label for="location">Plats:</label>
-    <input type="text" id="location" name="location" required />
-
+    <input type="text" id="location" name="location" />
     <label for="startdate">Startdatum:</label>
-    <input type="date" id="startdate" name="startdate" required />
-
+    <input type="date" id="startdate" name="startdate" />
     <label for="enddate">Slutdatum:</label>
-    <input type="date" id="enddate" name="enddate" required />
-
+    <input type="date" id="enddate" name="enddate" />
     <label for="description">Beskrivning:</label>
-    <textarea id="description" name="description" required></textarea>
-
+    <textarea id="description" name="description"></textarea>
     <button type="submit">Lägg till</button>
   </form>
-
   <p id="message"></p>
-
   <script src="js/add.js"></script>
 </body>
 </html>
