fixat fetch api i add

--- a/add.html
+++ b/add.html
@@ -30,6 +30,7 @@
     <button type="submit">Lägg till</button>
   </form>
   <p id="message"></p>
+  <script src="js/config.js"></script>
   <script src="js/add.js"></script>
 </body>
 </html>
