lagt till missade meta tags, fixat delete av erfarenhet

--- a/add.html
+++ b/add.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lägg till arbetserfarenhet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -28,8 +29,8 @@
     <label for="description">Beskrivning:</label>
     <textarea id="description" name="description"></textarea>
     <button type="submit">Lägg till</button>
+    <p id="message"></p>
   </form>
-  <p id="message"></p>
   <script src="js/config.js"></script>
   <script src="js/add.js"></script>
 </body>
